# mandelbrot

./: .gitignore  README.md
c/: CMakeLists.txt  c_mandelbrot  mandelbrot.c
python/: mandelbrot.py
